# galib-openmp

./: CMakeLists.txt  COPYRIGHT  ChangeLog  LICENSE  README  RELEASE-NOTES  makefile  makevars  makevars.bcc  makevars.vcpp
doc/: API.html  ClassHierarchy.html  Copyright.html  Extensions.html  Installation.html  Overview.html  References.html
examples/: README.txt  ex10.C  ex11.C  ex12.C  ex13.C  ex14.C  ex15.C  ex16.C  ex17.C  ex18.C  ex19.C  ex2.C  ex20.C  ex21.C  ex22.C  ex23.C  ex24.C  ex25.C  ex26.C  ex27.C  ex3.C  ex4.C  ex5.C  ex6.C  ex7.C  ex8.C  ex9.C  makefile  randtest.C  seed.C  settings.txt
examples/gnu/: AllocRing.cc  AllocRing.h  BitString.cc  BitString.h  Obstack.cc  Obstack.h  README  bitand.c  bitany.c  bitblt.c  bitclear.c  bitcopy.c  bitcount.c  bitinvert.c  bitlcomp.c  bitset1.c  bitstr.C  bitstr.h  bitxor.c  builtin.h  error.cc  gnuex.C
examples/graphic/: gaview.C  makefile  tspview.C
examples/pvmind/: Makefile.aimk  README  genome.C  genome.h  master.C  slave.C
examples/pvmpop/: Makefile.aimk  PVMDemeGA.C  PVMDemeGA.h  genome.C  genome.h  slave.C
ga/: ChangeLog  GA1DArrayGenome.C  GA1DArrayGenome.h  GA1DBinStrGenome.C  GA1DBinStrGenome.h  GA2DArrayGenome.C  GA2DBinStrGenome.C  GA2DBinStrGenome.h  GA3DArrayGenome.C  GA3DArrayGenome.h  GA3DBinStrGenome.C  GA3DBinStrGenome.h  GAAllele.C  GAAllele.h  GAArray.h  GABaseGA.C  GABaseGA.h  GABin2DecGenome.C  GABin2DecGenome.h  GABinStr.C  GABinStr.h  GADCrowdingGA.C  GADemeGA.C  GADemeGA.h  GAEvalData.h  GAGenome.C  GAGenome.h  GAIncGA.C  GAIncGA.h  GAList.C  GAList.h  GAListBASE.C  GAListBASE.h  GAListGenome.C  GAListGenome.h  GANode.h  GAParameter.C  GAParameter.h  GAPopulation.C  GAPopulation.h  (+29 more)
